update to bevy 0.16.0 and add stage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = "0.15.3"
+bevy = "0.16.0"
 rand = "0.9.1"
 itertools = "0.14.0"
-bevy_kira_audio = "0.22"
+bevy_kira_audio = "0.23"
+bevy_common_assets = "0.13.0"
 
 [profile.dev]
 opt-level = 1
